# mechinterp-template

./: .gitignore  README.md  pyproject.toml
src/: effects.py  inference.py  lasso.py  main.py  model.py  plot_ablations.py
src/model/: __init__.py  llm.py
src/model/hooks/: __init__.py  attention_heads.py  extraction.py  mlp_neurons.py  patching.py
src/train/: create_dataset.py  train_model.py  train_tokenizer.py
src/utils/: __init__.py  compare_answers.py  dataset.py  dir.py  download_models.py  export_results.py  manage_hf.py  parser.py  strip_geometry.py
